# transformer-dev

./: CODEOWNERS  README.md  init_workspace.sh  openapi.yaml  pyproject.toml
chart/: Chart.yaml  secrets.dev.yaml  values.dev.yaml  values.yaml
chart/templates/: component-tmp.yaml  training-data-pvc.yaml
dockerfiles/: Dockerfile  Dockerfile.base
docs/Transformer/: 0_code_structure.md  1_project_configuration.md  2_statistics.md  3_embeddings.md  4_filters_and_tags.md  5_file_system.md  6_training_pipeline.md
lightflow_dags/: evaluation_dag.py  hyperparameter_tuning_dag.py  training_dag.py
transformer/config/: config_base.yaml  paths.yaml
transformer/config/base/: data.yaml  embeddings.yaml  model.yaml  postprocessing.yaml  training.yaml
transformer/config/lightflow/: data.yaml  model.yaml  training.yaml
transformer/config/local/: data.yaml  embeddings.yaml  model.yaml  training.yaml
transformer/config/local-gpu/: data.yaml  model.yaml  training.yaml
transformer/config/optuna/: training.yaml
transformer/config/test/: data.yaml  embeddings.yaml  model.yaml  training.yaml
transformer/inputs/: data_loading.py  data_module.py  data_structures.py
transformer/inputs/embeddings/: embeddings.py  geographic_embedding.py  laplacian_embedding.py  lignepk_embedding.py  nextdesserte_embedding.py  node2vec_embedding.py  random_embedding.py
transformer/inputs/resources/: pr_download.py  pr_graph.py  pr_infos.py  train_type.py
transformer/inputs/snapshots/: snapshots_files.py  statistics.py  time_transform.py
transformer/inputs/utils/: prs_filters.py  sillons_filters.py  sillons_taggers.py  train_num_filters.py
transformer/outputs/post_processing/: fill_predictions.py  post_processing.py  reschedule_predictions.py  round_predictions.py
transformer/tests/: config.py  data.py  embeddings.py  graph.py  loaders.py  statistics.py  stats_counter.py  time_transform.py
transformer/tests/fixtures/: make_test_graph_data.py  make_test_snapshots.py  mock_files.py  mock_stats.py
transformer/tests/fixtures/data/: PRs_graph_edges.json  PRs_graph_networkx.pickle  PRs_graph_nodes.json  missing_PRs_neighbors.json  points_remarquables.csv
transformer/tests/fixtures/data/embeddings/: geographic_key_to_emb.json  lignepk_key_to_emb.json  nextdesserte_pr_key_to_emb.json  nextdesserte_train_key_to_emb.json  node2vec_key_to_emb.json
transformer/tests/fixtures/data/snapshots/: a.json.zstd  b.json.zstd  c.json.zstd  d.json.zstd
transformer/training/: hyperparameter_tuning.py  modules.py  test_model.py  train_model.py
transformer/training/metrics/: compute_metrics.py  losses.py  metrics.py  plot_metrics.py
utils/: config.py  dag_steps.py  file_system.py  loaders.py  logger.py  misc.py  mlflow.py  s3.py  stats_counter.py  times.py
